--- a/index.html
+++ b/index.html
@@ -182,17 +182,21 @@
         <img src="https://file.garden/ZoPMuUaA4j6Smpop/art/beachday3.png">
         <img src="https://file.garden/ZoPMuUaA4j6Smpop/art/beachday4.png">
     </details>
-
+    <details>
+        <summary>
+            <div style="font-size:21px;font-weight:bold;">SHROT: LOOKING FORWARD TO A LIFE<img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100730853_qPB.png"><img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100731539_Wol.png"></div>
+        </summary>
+        <p>insert text to be added</p>
+    </details>
     <details>
         <summmary>
-            <div style="font-size:21px;font-weight:bold;">ZICK: ANDRAJETT MASTERAMBLE [24/10/25]<img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100738656_G6V.png"><img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100731539_Wol.png"></div>
+            <div style="font-size:21px;font-weight:bold;">ZICK: ANDRAJETT MASTERAMBLE [24/10/25] <img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100738656_G6V.png"><img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100731539_Wol.png"></div>
         </summmary>
         <p>Exactly as it says. Andrajett has been a side-focus for quite some time, even though they have existed far way back then (only as an idea and conflict point),
             and for the recent months I've been fleshing them out little by little. I won't dive just right into their relationship, because i feel like 
             their backgrounds 
             play a part into how they act towards each other too. Most especially seen in Andra because well, Don't we all already know how jett is like? 
             I took this chance and place to talk about him.
-
         </p>
         <p>Andra is a well-known student in high school. He's most known for his ambitiousness for learning, yet very outgoing kind. How he behaves is just as how a student 
     from a prestigious family would, not. 
@@ -209,14 +213,14 @@
     that Andra trusts, which is Mr. Vincent.
     He led Andra into further methods and further sickening ideas, and treated Andra like a toy of mindless desire. 
     </p>
-<p></p>
-<p></p>
+    <p>to be continued sorry</p>
     </details>
+    
  <details>
     <summary>
         <div style="font-size:21px;font-weight:bold">ZICK: WHAT'S LEFT OF [22/11/25]<img style="height: 40px;width:35" src=""><img style="height: 40px;width:35" src=""></div>
     </summary>
-    <p></p>
+    <p>to be added</p>
 <p></p>
 <p></p>
 <p></p>
@@ -394,7 +398,7 @@ so i am making something in hopes that he knows how proud i am of him.</p>
         <summary>
             <div class="box3" style="font-size: 21px;font-weight: bold;">ZICK: PICTURE [13/08/24] <img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100731539_Wol.png"><img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100738710_Txo.png"><img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100738733_mYo.png"></div>
         </summary>
-        <p>once a few times i get to think about chloris being jiwa’s daughter and not at the same time. its just fucking horrible isnt it. your daughter gets modified by your very own enemyand you have to pretend that shes fine and want to genuinely rebond with her but theres this big wall-
+        <p>once a few times i get to think about chloris being jiwa’s daughter and not at the same time. its just horrible isnt it. your daughter gets modified by your very own enemyand you have to pretend that shes fine and want to genuinely rebond with her but theres this big wall-
             then you have to take care of your son thats not trusting you because they dont believe in the freedom you gave him and you are watching him slowly kill himself and you are trying so hard not to dwell on it and youre genuinely trying to be better towards both of them-
             jiwa how does it feel to have your daughter stolen to become the world’s proof of change and slowly becoming unintelligible as she gets worse and worse?
         </p>
@@ -407,12 +411,12 @@ so i am making something in hopes that he knows how proud i am of him.</p>
             <div style="font-weight:bold;font-size:21px;color:red">ZICK: LIVELY EXPECTATIONS [20/08/34] <img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100731539_Wol.png"><img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100738710_Txo.png"></div>
         </summary>
         <p><b>CONTENT WARNING: Description of pregnancy and child birth, mentions of abortion</b></p>
-        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/art/2024-08-20_192913.jpg">
-        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/art/2024-08-20_192913_1.jpg">
-        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/art/2024-08-20_192913_2.jpg">
-        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/art/2024-08-20_192913_3.jpg">
-        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/art/2024-08-20_192913_4.jpg">
-        <img style="width:800px;height:650px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/art/2024-08-21_223612.jpg">
+        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/web%20resource/2024-08-20_192913.webp">
+        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/web%20resource/2024-08-20_192913_1.webp">
+        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/web%20resource/2024-08-20_192913_2.webp">
+        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/web%20resource/2024-08-20_192913_3.webp">
+        <img style="width:800px;height:700px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/web%20resource/2024-08-20_192913_4.webp">
+        <img style="width:800px;height:650px;margin:1%" src="https://file.garden/ZoPMuUaA4j6Smpop/web%20resource/2024-08-21_223612.webp">
         <p>hmmmmmmmmmm</p>
     </details>
     <details>
@@ -898,4 +902,5 @@ roleplaying is normal...in fact we should bring it back !!
     </details>
 </details>
 </body>
+
 </html>
