--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
         <p>insert text to be added</p>
     </details>
     <details>
-        <summmary>
+        <summary>
             <div style="font-size:21px;font-weight:bold;">ZICK: ANDRAJETT MASTERAMBLE [24/10/25] <img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100738656_G6V.png"><img style="height: 40px;width:35" src="https://f2.toyhou.se/file/f2-toyhou-se/thumbnails/100731539_Wol.png"></div>
-        </summmary>
+        </summary>
         <p>Exactly as it says. Andrajett has been a side-focus for quite some time, even though they have existed far way back then (only as an idea and conflict point),
             and for the recent months I've been fleshing them out little by little. I won't dive just right into their relationship, because i feel like 
             their backgrounds 
@@ -904,3 +904,4 @@ roleplaying is normal...in fact we should bring it back !!
 </body>
 
 </html>
+
